tests/integration/snapshots/integration__flir__must_pass_path.snap
---
source: tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <FILES>...

Usage: flir <FILES>...

For more information, try '--help'.

----- args -----
