tests/integration/snapshots/integration__flir__no_r_files.snap
---
source: tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
Warning: No R files found under the given path(s).

----- stderr -----

----- args -----
.
